@@ -431,7 +431,7 @@ SSL_CTX_load_verify_locations(3) for details.
 (default "/etc/perdition/perdition.ca/")
 .TP
 .B \-\-ssl_ca_accept_self_signed:
-Accept self-signed certificates.
+Accept self-signed certificate authorities.
 .TP
 .B \-\-ssl_cert_file FILENAME:
 Certificate to use when listening for SSL or TLS connections. 
